# QtQuickBaseProject

./: CMakeLists.txt  README.md  main.cpp  main.qml
include/: AppModel.hpp
src/: AppModel.cpp
